# intersubjectfc

./: .gitignore  README.md  pyproject.toml
src/intersubjectfc/: __init__.py  interface.py
src/intersubjectfc/analyses/: __init__.py  ispc.py  time_resolved_isc.py
tests/: test_interface.py  test_time_resolved_isc.py
